--- a/index.html
+++ b/index.html
@@ -379,67 +379,52 @@
             <!--/.container -->
           </div>
           <!--/.navbar -->
-          <div class="fluid-row" id="header"></div>
-          <img
-            src="photos/me.jpg"
-            align="right"
-            alt="logo"
-            style="top: 0; right: 0; padding: 20px"
-            width="25%"
-          />
+
+          <div class="right">
+            <div class="wrap_text">
+              <header>
+                <center>
+                  <img src="photos/me.jpg" align="center" />
+                </center>
+                <p>
+                  Welcome! Feel free to take a look at the projects I have
+                  completed during my time as a graduate student in the
+                  <a href="https://www.depts.ttu.edu/aaec/"
+                    >Department of Agricultural and Applied Economics</a
+                  >
+                  at
+                  <a href="https://www.ttu.edu/">Texas Tech University</a> and
+                  at the
+                  <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a
+                  >.
+                </p>
+                <p>
+                  Email -
+                  <a href="mailto:lim.don93@gmail.com" class="email"
+                    >lim.don93@gmail.com</a
+                  >
+                </p>
+                <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
+              </header>
+            </div>
+          </div>
           <div id="section" class="section level6">
             <h6><span class="math inline"></span></h6>
-
-            <p>
-              <br /><b>M.S. Agricultural and Applied Economics</b><br />
-              Texas Tech University <br />
-              Lubbock, Texas<br /><br />
-              <b>M.A. Philosophy, Political Science, and Economics (PPE)</b
-              ><br />
-              CEVRO Institute<br />
-              Prague, Czech Republic<br /><br />
-              <b
-                >B.A. General Studies (Political Science, Philosophy, History) </b
-              ><br />
-              University of Michigan<br />
-              Ann Arbor, Michigan
-            </p>
-            <p><br /></p>
-            <p>
-              Welcome! Feel free to take a look at the projects I have completed
-              during my time as a graduate student in the
-              <a href="https://www.depts.ttu.edu/aaec/"
-                >Department of Agricultural and Applied Economics</a
-              >
-              at <a href="https://www.ttu.edu/">Texas Tech University</a> and at
-              the
-              <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a>.
-            </p>
-            <p><br /></p>
+            <h1>Education</h1>
+            <hr />
+            <b>M.S. Agricultural and Applied Economics</b><br />
+            Texas Tech University <br />
+            Lubbock, Texas<br /><br />
+            <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
+            CEVRO Institute<br />
+            Prague, Czech Republic<br /><br />
+            <b>B.A. General Studies (Political Science, Philosophy, History) </b
+            ><br />
+            University of Michigan<br />
+            Ann Arbor, Michigan
           </div>
-          <div id="email-lim.don93@gmail.com">
-            <h5>
-              Email -
-              <a href="mailto:lim.don93@gmail.com" class="email"
-                >lim.don93@gmail.com</a
-              >
-            </h5>
-          </div>
-          <div id="cv-pdf">
-            <h5>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</h5>
-            <p><br /></p>
-          </div>
-          <hr
-            style="
-              height: 2px;
-              width: 700px;
-              margin-left: 0%;
-              border-width: 0;
-              color: gray;
-              background-color: gray;
-            "
-          />
-          <div id="certifications" class="section level2">
+          <hr />
+          <div id="certifications" class="section level1">
             <h1>Certificates</h1>
             <div class="a">
               <ul class="a">
@@ -454,16 +439,7 @@
               </ul>
             </div>
           </div>
-          <hr
-            style="
-              height: 2px;
-              width: 700px;
-              margin-left: 0%;
-              border-width: 0;
-              color: gray;
-              background-color: gray;
-            "
-          />
+          <hr />
           <div id="coursework" class="section level1">
             <h1>Texas Tech University Relevant Coursework</h1>
             <h2>Fall 2021</h2>
@@ -482,8 +458,15 @@
                   >]
                 </li>
                 <li>
-                  Term paper (also submitted to POLS 5385): <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
-                    and Diabetes—A Two-Stage Difference-in-Difference</i> - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf">PDF</a>]
+                  Term paper (also submitted to POLS 5385):
+                  <i
+                    >Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
+                    and Diabetes—A Two-Stage Difference-in-Difference</i
+                  >
+                  - [<a
+                    href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf"
+                    >PDF</a
+                  >]
                 </li>
               </ul>
               <h3>AAEC 6305 Economic Optimization</h3>
@@ -560,8 +543,8 @@
                   >]
                 </li>
                 <li>
-                  Homework 2: Propensity score matching (PSM) exercise on the NSW
-                  program study (Dehejia & Wahba,
+                  Homework 2: Propensity score matching (PSM) exercise on the
+                  NSW program study (Dehejia & Wahba,
                   <a
                     href="https://econpapers.repec.org/article/tprrestat/v_3a84_3ay_3a2002_3ai_3a1_3ap_3a151-161.htm"
                     >2002</a
@@ -735,9 +718,9 @@
                   >]
                 </li>
                 <li>
-                  Term paper: Economic Freedom and COVID-19. (where PDF
-                  contains the final submission, ZIP contains the original data,
-                  and R contains the R code used to clean original data) - [<a
+                  Term paper: Economic Freedom and COVID-19. (where PDF contains
+                  the final submission, ZIP contains the original data, and R
+                  contains the R code used to clean original data) - [<a
                     href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
                     >PDF</a
                   >] [<a
@@ -751,29 +734,18 @@
               </ul>
             </div>
           </div>
-          <hr
-            style="
-              height: 2px;
-              width: 700px;
-              margin-left: 0%;
-              border-width: 0;
-              color: gray;
-              background-color: gray;
-            "
-          />
+          <hr />
           <div id="research" class="section level1">
             <h1>CEVRO Institute</h1>
-            <div
-              id="cevro"
-              class="a"
-            >
+            <div id="cevro" class="a">
               <ul class="a">
                 <li>
-                  Master's thesis: <i>An Institutional Analysis on Open Source: How Developers Use
-                    Knowledge and Entrepreneurship in Communities</i> - [<a
-                    href="research/LimDon_WritingSample_Thesis.pdf"
-                    >PDF</a
-                  >]
+                  Master's thesis:
+                  <i
+                    >An Institutional Analysis on Open Source: How Developers
+                    Use Knowledge and Entrepreneurship in Communities</i
+                  >
+                  - [<a href="research/LimDon_WritingSample_Thesis.pdf">PDF</a>]
                 </li>
               </ul>
             </div>
