--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
           </div>
           <!--/.navbar -->
 
-          <div class="right">
-            <div class="wrap_text">
+            <div class="wrapper">
               <header>
                 <center>
                   <img src="photos/me.jpg" align="center" />
@@ -407,7 +406,6 @@
                 <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
               </header>
             </div>
-          </div>
           <div id="section" class="section level6">
             <h6><span class="math inline"></span></h6>
             <h1>Education</h1>
