--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
                 </p>
                 <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
               </header>
+              <section>
             </div>
           <div id="section" class="section level6">
             <h6><span class="math inline"></span></h6>
@@ -750,6 +751,7 @@
         </div>
       </div>
     </div>
+  </section>
     <script>
       // add bootstrap table styles to pandoc tables
       function bootstrapStylePandocTables() {
