--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="wrapper">
               <header>
                 <center>
-                  <img src="photos/me.jpg" align="center" />
+                  <img src="photos/me.jpg" align="center" style="padding-top: 20px;"/>
                 </center>
                 <p>
                   Welcome! Feel free to take a look at the projects I have
@@ -407,8 +407,10 @@
               </header>
               <section>
             </div>
-          <div id="section" class="section level6">
-            <h6><span class="math inline"></span></h6>
+            <br>
+            <br>
+            <br>
+          <div id="coursework" class="section level1">
             <h1>Education</h1>
             <b>M.S. Agricultural and Applied Economics</b><br />
             Texas Tech University <br />
