--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <br>
             <br>
             <br>
-          <div id="coursework" class="section level1">
+          <div id="education" class="section level1">
             <h1>Education</h1>
             <b>M.S. Agricultural and Applied Economics</b><br />
             Texas Tech University <br />
