--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       href="site_libs/font-awesome-5.1.0/css/v4-shims.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" integrity="sha512-i8+QythOYyQke6XbStjt9T4yQHhhM+9Y9yTY1fOxoDQwsQpKMEpIoSQZ8mVomtnVCf9PBvoQDnKl06gGOOD19Q==" crossorigin="anonymous" />
     <style type="text/css">
       code {
         white-space: pre;
@@ -443,7 +444,7 @@
           </div>
           <hr />
           <div id="coursework" class="section level1">
-            <h1>Texas Tech University Relevant Coursework</h1>
+            <h1>Texas Tech University</h1>
             <h2>Fall 2021</h2>
             <div class="a">
               <h3>AAEC 5301 Institutional Analysis</h3>
@@ -806,16 +807,6 @@
         // tocify
         var toc = $("#TOC").tocify(options).data("toc-tocify");
       });
-    </script>
-    <!-- dynamically load mathjax for compatibility with self-contained -->
-    <script>
-      (function () {
-        var script = document.createElement("script");
-        script.type = "text/javascript";
-        script.src =
-          "../mathjax.rstudio.com/2.7.2/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML";
-        document.getElementsByTagName("head")[0].appendChild(script);
-      })();
     </script>
   </body>
 </html>
