--- a/index.html
+++ b/index.html
@@ -350,14 +350,10 @@
                   data-toggle="collapse"
                   data-target="#navbar"
                 >
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"
-                  ><span style="font-size: 36px">
-                    <span style="color: black">Don Lim</span></span
-                  ></a
+                <a class="navbar-a" href="index.html"
+                  >
+                    <span class="navbar-name">Don Lim</span></a
                 >
               </div>
               <div id="navbar" class="navbar-collapse collapse">
