--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
                 >
                 </button>
                 <a class="navbar-a" href="index.html"
-                  >
-                    <span class="navbar-name">Don Lim</span></a
+                  ><span><span class="navbar-name">Don Lim</span></span>
+                    </a
                 >
               </div>
               <div id="navbar" class="navbar-collapse collapse">
@@ -401,8 +401,7 @@
                     >lim.don93@gmail.com</a
                   >
                 </p>
-                <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p> 
-                <br>
+                <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
               </header>
               <section>
             </div>
