--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@
                   data-toggle="collapse"
                   data-target="#navbar"
                 >
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
                 </button>
                 <a class="navbar-a" href="index.html"
                   ><span><span class="navbar-name">Don Lim</span></span>
@@ -403,21 +407,17 @@
                   >
                 </p>
                 <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
+                <br>
+            <br>
               </header>
               <section>
             </div>
-<<<<<<< HEAD
             <br>
             <br>
             <br>
           <div id="education" class="section level1">
-=======
-          </div>
-          <div id="section" class="section level6">
-            <h6><span class="math inline"></span></h6>
->>>>>>> parent of c6accaa (u)
             <h1>Education</h1>
-            <b>M.S. Agricultural and Applied Economics</b><br />
+            <b>M.S. Agricultural and Applied Economics (expected April 2022)</b><br />
             Texas Tech University <br />
             Lubbock, Texas<br /><br />
             <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
