--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   <body>
     <div class="container-fluid main-container">
       <!-- setup 3col/9col grid for toc_float and main content  -->
-      <div class="row-fluid">
+      <div class="row-fluid" id="navbar">
         <div class="col-xs-12 col-sm-4 col-md-3">
           <div id="TOC" class="tocify"></div>
         </div>
@@ -387,8 +387,8 @@
                 <center>
                   <img src="photos/me.jpg" align="center" style="padding-top: 20px;"/>
                 </center>
-                <p>
-                  <br>
+                <br>
+                <p class="first-letter">
                   Welcome! Feel free to take a look at the projects I have
                   completed during my time as a graduate student in the
                   <a href="https://www.depts.ttu.edu/aaec/"
@@ -415,7 +415,7 @@
             <br>
             <br>
             <br>
-          <div id="education" class="section level1">
+          <div id="education" class="education">
             <h1>Education</h1>
             <b>M.S. Agricultural and Applied Economics (expected April 2022)</b><br />
             Texas Tech University <br />
@@ -429,7 +429,7 @@
             Ann Arbor, Michigan
           </div>
           <hr />
-          <div id="certifications" class="section level1">
+          <div id="certifications" class="certifications">
             <h1>Certificates</h1>
             <div class="a">
               <ul class="a">
@@ -445,10 +445,10 @@
             </div>
           </div>
           <hr />
-          <div id="coursework" class="section level1">
+          <div id="coursework" class="texas-tech">
             <h1>Texas Tech University</h1>
             <h2>Fall 2021</h2>
-            <div class="a">
+            <div class="fall-2021" id="texas-tech">
               <h3>AAEC 5301 Institutional Analysis</h3>
               <ul class="a">
                 <li>
