--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     >PDF</a
                   >]
                 </li>
-                <li>
+                <li class="star">
                   Term paper (also submitted to POLS 5385):
                   <i
                     >Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
@@ -722,7 +722,7 @@
                     >PDF</a
                   >]
                 </li>
-                <li>
+                <li class="star">
                   Term paper: Economic Freedom and COVID-19. (where PDF contains
                   the final submission, ZIP contains the original data, and R
                   contains the R code used to clean original data) - [<a
@@ -744,7 +744,7 @@
             <h1>CEVRO Institute</h1>
             <div id="cevro" class="a">
               <ul class="a">
-                <li>
+                <li class="star">
                   Master's thesis:
                   <i
                     >An Institutional Analysis on Open Source: How Developers
