--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
             <div class="wrap_text">
               <header>
                 <center>
-                  <img src="photos/me.jpg" align="center" style="padding-top: 20px;"/>
+                  <input type="checkbox" id="zoombCheck">
+                  <label for="zoombCheck"><img src="photos/me.jpg" align="center" style="padding-top: 20px;"/></label>
                 </center>
                 <br>
                 <p class="first-letter">
