--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <!-- Added by HTTrack -->
   <meta
     http-equiv="content-type"
     content="text/html;charset=utf-8"
-  /><!-- /Added by HTTrack -->
 
   <head>
     <meta charset="utf-8" />
@@ -291,8 +289,8 @@
       }
 
       .toc-content {
-        padding-left: 60px;
-        padding-right: 60px;
+        padding-left: 30px;
+        padding-right: 40px;
       }
 
       div.main-container {
@@ -336,7 +334,7 @@
   <body>
     <div class="container-fluid main-container">
       <!-- setup 3col/9col grid for toc_float and main content  -->
-      <div class="row-fluid" id="navbar">
+      <div class="row-fluid">
         <div class="col-xs-12 col-sm-4 col-md-3">
           <div id="TOC" class="tocify"></div>
         </div>
@@ -354,8 +352,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                </button>
-                <a class="navbar-a" href="index.html"
+                <a class="navbar-brand" href="index.html"
                   ><span><span class="navbar-name">Don Lim</span></span>
                     </a
                 >
