--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
   </head>
 
   <body>
+    <a href="#top" class="neon-button">^</a>
     <div class="container-fluid main-container">
       <!-- setup 3col/9col grid for toc_float and main content  -->
       <div class="row-fluid">
@@ -352,7 +353,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="navbar-brand" href="index.html"
+                <a class="navbar-name" href="index.html"
                   ><span><span class="navbar-name">Don Lim</span></span>
                     </a
                 >
