--- a/index.html
+++ b/index.html
@@ -49,40 +49,6 @@
         }
       }
     </script>
-    <style type="text/css">
-      h1 {
-        font-size: 34px;
-        font-weight: bold;
-      }
-
-      h1.title {
-        font-size: 38px;
-      }
-
-      h2 {
-        font-size: 30px;
-      }
-
-      h3 {
-        font-size: 24px;
-      }
-
-      h4 {
-        font-size: 18px;
-      }
-
-      h5 {
-        font-size: 16px;
-      }
-
-      h6 {
-        font-size: 12px;
-      }
-
-      .table th:not([align]) {
-        text-align: left;
-      }
-    </style>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <style type="text/css">
       .main-container {
@@ -379,8 +345,7 @@
           </div>
           <!--/.navbar -->
 
-          <div class="right">
-            <div class="wrap_text">
+            <div class="wrap_text" id="container-wrap">
               <header>
                 <center>
                   <input type="checkbox" id="zoombCheck">
@@ -406,15 +371,13 @@
                   >
                 </p>
                 <p>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</p>
-                <br>
-            <br>
+              
               </header>
               <section>
             </div>
-            <br>
-            <br>
-            <br>
           <div id="education" class="education">
+            <br>
+            <br>
             <h1>Education</h1>
             <hr />
             <b>M.S. Agricultural and Applied Economics (expected April 2022)</b><br />
