--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   </head>
 
   <body>
-    <a href="#top" class="neon-button">^</a>
+    <button onclick="topFunction()" class="neon-button" id="myBtn" title="Go to top">^</button>
     <div class="container-fluid main-container">
       <!-- setup 3col/9col grid for toc_float and main content  -->
       <div class="row-fluid">
@@ -392,7 +392,7 @@
             Ann Arbor, Michigan
           </div>
           
-          <div id="certifications" class="certifications">
+          <div id="certifications">
             <h1>Certificates</h1>
             <hr />
             <div class="a">
@@ -409,11 +409,16 @@
             </div>
           </div>
           
-          <div id="coursework" class="texas-tech">
+          <div id="coursework">
             <h1>Texas Tech University</h1>
             <hr />
+            <h2>Spring 2022</h2>
+            <div class="border">
+              <h3>AAEC 5310 Advanced Market Analysis</h3>
+              <h3>AAEC 6301 Applied Macroeconomic Analysis</h3>
+            </div>
             <h2>Fall 2021</h2>
-            <div class="border" id="texas-tech">
+            <div class="border">
               <h3>AAEC 5301 Institutional Analysis</h3>
               <ul class="a">
                 <li>
@@ -777,6 +782,7 @@
         var toc = $("#TOC").tocify(options).data("toc-tocify");
       });
     </script>
+    <script src="js/scroll.js"></script>
   </body>
   <footer></footer>
 </html>
