--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   </head>
 
   <body>
-    <button onclick="topFunction()" class="neon-button" id="myBtn" title="Go to top">^</button>
+    <button onclick="topFunction()" class="neon-button" id="myBtn" title="Go to top" style="display: none;">^</button>
     <div class="container-fluid main-container">
       <!-- setup 3col/9col grid for toc_float and main content  -->
       <div class="row-fluid">
