--- a/index.html
+++ b/index.html
@@ -355,14 +355,11 @@
                 <p>
                   Welcome! Feel free to take a look at the projects I have
                   completed during my time as a graduate student in the
-                  <a href="https://www.depts.ttu.edu/aaec/"
-                    >Department of Agricultural and Applied Economics</a
-                  >
+                  
                   at
-                  <a href="https://www.ttu.edu/">Texas Tech University</a> and
+                   and
                   at the
-                  <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a
-                  >.
+                  .
                 </p>
                 <p>
                   Email -
@@ -381,22 +378,26 @@
             <h1>Education</h1>
             <hr />
             <b>M.S. Agricultural and Applied Economics (expected April 2022)</b><br />
-            Texas Tech University <br />
+            <a href="https://www.ttu.edu/">Texas Tech University</a> <br />
+            <a href="https://www.depts.ttu.edu/aaec/"
+                    >Department of Agricultural and Applied Economics</a
+                  > <br />
             Lubbock, Texas<br /><br />
             <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
-            CEVRO Institute<br />
+            <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a><br />
             Prague, Czech Republic<br /><br />
             <b>B.A. General Studies (Political Science, Philosophy, History) </b
             ><br />
-            University of Michigan<br />
+            <a href="https://umich.edu/">University of Michigan</a><br />
+            <a href="https://lsa.umich.edu/">College of Literature, Science and the Arts</a> <br />
             Ann Arbor, Michigan
           </div>
           
           <div id="certifications">
             <h1>Certificates</h1>
             <hr />
-            <div class="a">
-              <ul class="a">
+            <div class="container2">
+              <ul class="container2">
                 <li>
                   <a href="https://www.coursera.org/learn/intro-sql"
                     >Introduction to Structured Query Language (SQL)</a
@@ -420,7 +421,7 @@
             <h2>Fall 2021</h2>
             <div class="border">
               <h3>AAEC 5301 Institutional Analysis</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Class presentation:
                   <i
@@ -445,7 +446,7 @@
                 </li>
               </ul>
               <h3>AAEC 6305 Economic Optimization</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Homework 1: Linear programming model (LPM) using the MATLAB
                   <a
@@ -504,7 +505,7 @@
                 </li>
               </ul>
               <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Homework 1: Difference-in-difference exercise on minimum wage
                   and employment study in New Jersey and Pennsylvania (Card &
@@ -560,7 +561,7 @@
             <h2>Spring 2021</h2>
             <div class="border">
               <h3>AAEC 5303 Applied Econometrics II</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Lab 1: Implementation of instrumental variable (IV) procedures
                   analyzing the effect of education (as years of schooling) on
@@ -608,7 +609,7 @@
                 </li>
               </ul>
               <h3>AAEC 6311 Advanced Production Economics</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Homework 1: Calculus review - [<a
                     href="coursework/spring 2021/AAEC 6311 - Production/Homework 1/AAEC5303_HW1_Lim.pdf"
@@ -641,7 +642,7 @@
             <h2>Fall 2020</h2>
             <div class="border">
               <h3>AAEC 5307 Applied Econometrics I</h3>
-              <ul class="a">
+              <ul class="container2">
                 <li>
                   Homework 1: Introduction to probability density functions and
                   calculating the rate of returns for the capital asset pricing
@@ -714,8 +715,8 @@
             <br>
             <h1>CEVRO Institute</h1>
             <hr />
-            <div id="cevro" class="a">
-              <ul class="a">
+            <div id="cevro" class="container2">
+              <ul class="container2">
                 <li class="star">
                   Master's thesis:
                   <i
