--- a/index.html
+++ b/index.html
@@ -354,12 +354,7 @@
                 <br>
                 <p>
                   Welcome! Feel free to take a look at the projects I have
-                  completed during my time as a graduate student in the
-                  
-                  at
-                   and
-                  at the
-                  .
+                  completed during my time as a graduate student.
                 </p>
                 <p>
                   Email -
@@ -385,6 +380,7 @@
             Lubbock, Texas<br /><br />
             <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
             <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a><br />
+            School of Political Studies <br />
             Prague, Czech Republic<br /><br />
             <b>B.A. General Studies (Political Science, Philosophy, History) </b
             ><br />
