--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-                <a class="navbar-name" href="index.html"
+                <a class="navbar-name" href="https://donlim93.github.io/"
                   ><span><span class="navbar-name">Don Lim</span></span>
                     </a
                 >
