--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <br>
             <h1>Education</h1>
             <hr />
-            <b>M.S. Agricultural and Applied Economics (expected April 2022)</b><br />
+            <b>M.S. Agricultural and Applied Economics (expected May 2022)</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
             <a href="https://www.depts.ttu.edu/aaec/"
             target="_blank" rel="noopener noreferrer">Department of Agricultural and Applied Economics</a
@@ -413,6 +413,7 @@
             <div class="border">
               <h3>AAEC 5310 Advanced Market Analysis</h3>
               <h3>AAEC 6301 Applied Macroeconomic Analysis</h3>
+              <h3>AAEC 5321 Research Methodology in Economics</h3>
             </div>
             <h2>Fall 2021</h2>
             <div class="border">
