--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
                   >
                 </p>
                 <p>Resume - [<a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer">PDF</a>]</p>
-              
               </header>
+              <br>
               <section>
             </div>
           <div id="education" class="education">
@@ -435,11 +435,11 @@
                   <i
                     >Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
                     and Diabetes—A Two-Stage Difference-in-Difference</i
-                  >
+                  > (where PDF contains the final submission, ZIP contains the original data, and R contains the R code used to clean the original data)
                   - [<a
                     href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf" target="_blank" rel="noopener noreferrer"
                     >PDF</a
-                  >]
+                  >] [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/Data.zip">ZIP</a>] [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/data_cleanup.Rmd">R</a>]
                 </li>
               </ul>
               <h3>AAEC 6305 Economic Optimization</h3>
@@ -691,9 +691,9 @@
                   >]
                 </li>
                 <li class="star">
-                  Term paper: Economic Freedom and COVID-19. (where PDF contains
+                  Term paper: <i>Economic Freedom and COVID-19</i>. (where PDF contains
                   the final submission, ZIP contains the original data, and R
-                  contains the R code used to clean original data) - [<a
+                  contains the R code used to clean the original data) - [<a
                     href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf" target="_blank" rel="noopener noreferrer"
                     >PDF</a
                   >] [<a
