--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="border">
               <h3>AAEC 5310 Advanced Market Analysis</h3>
               <h3>AAEC 6301 Applied Macroeconomic Analysis</h3>
-              <h3>AAEC 5321 Research Methodology in Economics</h3>
+              <h3>BECO 5376 Austrian Economics</h3>
             </div>
             <h2>Fall 2021</h2>
             <div class="border">
