--- a/index.html
+++ b/index.html
@@ -388,6 +388,16 @@
             <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science and the Arts</a> <br />
             Ann Arbor, Michigan
           </div>
+
+        <div id="certifications">
+          <h1>Data Visualization Sample</h1>
+          <hr />
+          <ul class="container2">
+            <li>
+              The World Bank - <a href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global Database on Intergenerational Mobility</a> (GDIM) - [<a href="sample/Data-sample.html">R<a></a>]
+            </li>
+          </ul>
+        </div>
           
           <div id="certifications">
             <h1>Certificates</h1>
