--- a/index.html
+++ b/index.html
@@ -422,8 +422,23 @@
             <h2>Spring 2022</h2>
             <div class="border">
               <h3>AAEC 5310 Advanced Market Analysis</h3>
+              <ul class="container2">
+                <li>
+                  Term paper: <i>Plains Cotton Cooperative Association (PCCA) Survey Report 2022</i> - [<a href="coursework/spring 2022/AAEC 5310 - Advanced market analysis/report/PCCA_report_final.pdf" target="_blank" rel="noopener noreferrer">PDF</a>]
+                </li>
+              </ul>
               <h3>AAEC 6301 Applied Macroeconomic Analysis</h3>
+              <ul class="container2">
+                <li>
+                  Class presentation: <i><a href="https://www.aeaweb.org/articles?id=10.1257/jep.35.3.3">Effects of the COVID-19 Recession on the US Labor Market: Occupation, Family, and Gender</a></i> - [<a href="coursework/spring 2022/AAEC 6301 - Applied Macro/presentation.pdf">PDF</a>]
+                </li>
+              </ul>
               <h3>BECO 5376 Austrian Economics</h3>
+              <ul class="container2">
+                <li>
+                  Class presentation: The Market (Israel Kirzner, <i>Market Theory and the Price System</i>, Ch. 2; Murray Rothbard, <i>Man, Economy, and State</i>, Ch. 2) - [<a href="coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf"]>PDF</a>]
+                </li>
+              </ul>
             </div>
             <h2>Fall 2021</h2>
             <div class="border">
