--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         </div>
           
           <div id="certifications">
-            <h1>Certificates</h1>
+            <h1>Certification</h1>
             <hr />
             <div class="container2">
               <ul class="container2">
