--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <br>
             <h1>Education</h1>
             <hr />
-            <b>M.S. Agricultural and Applied Economics (expected May 2022)</b><br />
+            <b>M.S. Agricultural and Applied Economics</b><br />
             <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
             <a href="https://www.depts.ttu.edu/aaec/"
             target="_blank" rel="noopener noreferrer">Department of Agricultural and Applied Economics</a
@@ -390,11 +390,14 @@
           </div>
 
         <div id="certifications">
-          <h1>Data Visualization Sample</h1>
+          <h1>Data Work Samples</h1>
           <hr />
           <ul class="container2">
             <li>
-              The World Bank - <a href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global Database on Intergenerational Mobility</a> (GDIM) - [<a href="sample/Data-sample.html">R<a></a>]
+              The World Bank - <a href="https://datacatalog.worldbank.org/search/dataset/0050771/global-database-on-intergenerational-mobility">Global Database on Intergenerational Mobility</a> (GDIM) - [<a href="sample/Data-sample.html">R</a>]
+            </li>
+            <li>
+              <a href="https://archive.ics.uci.edu/ml/datasets/Online%20Retail%20II">Retail Data Set II</a>Online  from Dr. Daqing Chen, School of Engineering, London South Bank University - [<a href="sample/RFM_sample.html">R</a>]
             </li>
           </ul>
         </div>
