--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
               <h3>AAEC 6301 Applied Macroeconomic Analysis</h3>
               <ul class="container2">
                 <li>
-                  Class presentation: <i><a href="https://www.aeaweb.org/articles?id=10.1257/jep.35.3.3">Effects of the COVID-19 Recession on the US Labor Market: Occupation, Family, and Gender</a></i> - [<a href="coursework/spring 2022/AAEC 6301 - Applied Macro/presentation.pdf">PDF</a>]
+                  Class presentation: <i><a href="https://www.aeaweb.org/articles?id=10.1257/jep.35.3.3" target="_blank" rel="noopener noreferrer">Effects of the COVID-19 Recession on the US Labor Market: Occupation, Family, and Gender</a></i> - [<a href="coursework/spring 2022/AAEC 6301 - Applied Macro/presentation.pdf" target="_blank" rel="noopener noreferrer">PDF</a>]
                 </li>
               </ul>
               <h3>BECO 5376 Austrian Economics</h3>
               <ul class="container2">
                 <li>
-                  Class presentation: The Market (Israel Kirzner, <i>Market Theory and the Price System</i>, Ch. 2; Murray Rothbard, <i>Man, Economy, and State</i>, Ch. 2) - [<a href="coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf"]>PDF</a>]
+                  Class presentation: The Market (Israel Kirzner, <i>Market Theory and the Price System</i>, Ch. 2; Murray Rothbard, <i>Man, Economy, and State</i>, Ch. 2) - [<a href="coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf" target="_blank" rel="noopener noreferrer"]>PDF</a>]
                 </li>
               </ul>
             </div>
